# ros-brigde-poc

./: .gitignore  .gitmodules  README.md  requirements.txt
docker/: Dockerfile  dock.sh
src/bridge/: CMakeLists.txt  package.xml
src/bridge/launch/: server.launch.py
src/bridge/scripts/client/: rclpy_client.py  roslib_client.py
src/bridge/scripts/server/: bridge_server.py
src/bridge_msgs/: CMakeLists.txt  package.xml
src/bridge_msgs/action/: BridgeAction.action
